--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,46 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/framelayout" >
 
-    <Button
+    <ImageView
+        android:id="@+id/frameImage"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="Start"
-        android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="20pt" />
-</RelativeLayout>
+        android:src="@drawable/cherry"
+        android:layout_gravity="center" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/trans_bckground_logo" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Upcoming Events"
+            android:id="@+id/events"
+            android:textSize="14pt"
+            android:background="#d2ffffff"
+            android:textColor="#ff514e51"
+            android:padding="10dp"/>
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Interactive Map"
+            android:id="@+id/map"
+            android:textSize="14pt"
+            android:background="#d2ffffff"
+            android:textColor="#ff514e51"
+            android:padding="10dp" />
+
+    </LinearLayout>
+</FrameLayout>
