--- a/app/src/main/res/values/building_info.xml
+++ b/app/src/main/res/values/building_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <location>
+    <!--<location>
         <title>Husky Union Building (HUB)</title>
         <latitude>47.655762</latitude>
         <longitude>-122.305437</longitude>
@@ -17,5 +17,5 @@
         <latitude>47.6538068</latitude>
         <longitude>-122.307808</longitude>
         <short_description>The beautiful Drumheller Fountain has been a staple of the UW campus since 1961.</short_description>
-    </location>
+    </location>-->
 </resources>
