a bunch of random stuff

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Buildings Near You"
+            android:text="Sites Near You"
             android:id="@+id/textView"
             android:padding="10dp"
             android:singleLine="false" />
