--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,11 +6,14 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:id="@+id/image"/>
+        android:id="@+id/image"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"/>
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/building_name"
-        android:textSize="30sp"
-        android:padding="5dp"/>
+        android:textSize="20sp"
+        android:padding="5dp"
+        android:textColor="#ff232323" />
 </LinearLayout>
